--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,14 @@ dist.jar=${dist.dir}/Fornecedores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.40-bin.jar=/home/lucas/Desenvolvimento/NetBeansProjects/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.Mysql.classpath}
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
