--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,4 @@ javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Browser Default do Sistema>
 javafx.run.inbrowser.path=C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
-user.properties.file=/home/vorb/.netbeans/8.2/build.properties
+user.properties.file=/home/lucas/.netbeans/8.1/build.properties
